# sn-tracer-egui

./: .gitignore  Cargo.toml  launch.sh  launch_dev.ps1  launch_dev.sh  testkeyboard.py  windows_install.iss  windows_install_wine.iss
src/: lib.rs  main.rs  service.rs  testapp.rs
src/widgets/: csv_table.rs  table.rs
