[package]
name = "sn-tracer-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
csv = "1.3.0"
dirs = "5.0.1"
eframe = { version = "0.24.0", features = ["persistence"] }
egui_extras = "0.24.0"
egui_file = "0.12.0"
env_logger = "0.10.1"
itertools = "0.12.0"
log = "0.4.20"
rdev = "0.5.3"
rfd = { version = "0.12.1", default-features = false, features = ["xdg-portal"] }
serde = { version = "1.0.193", features = ["serde_derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-serial = "5.4.4"
