[package]
name = "sn-tracer-egui"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
dirs = "5.0.1"
eframe = { version = "0.24.1", features = ["persistence", "glow", "default_fonts", "x11"], default-features = false }
egui = "0.24.1"
egui_extras = "0.24.1"
env_logger = "0.10.1"
itertools = "0.12.0"
log = "0.4.20"
rdev = "0.5.3"
rfd = { version = "0.12.1", default-features = false, features = ["xdg-portal"] }
serde = { version = "1.0.193", features = ["serde_derive"] }
sysinfo = "0.29.11"
tokio = { version = "1.34.0", features = ["full"] }
tokio-serial = { version = "5.4.4", features = ["libudev"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
console = []
